<resources>
    <string name="app_name">Survey Addition</string>
    <string name="palestinian">Palestinian</string>
    <string name="israeli">Israeli</string>
    <string name="count_from_model">Count From Model</string>
    <string name="result">Result</string>
    <string name="reset">Reset</string>
    <string name="continue_survey">Continue Survey</string>
    <string name="count_from_main">Count From Main</string>
    <string name="question">Would your views on the conflict be more likely\ndescribed as \"Pro-Palestinian\" or \"Pro-Israeli?\" </string>
</resources>