<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/israeli_button"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:text="@string/israeli"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/palestinian_button"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:text="@string/palestinian"
        app:layout_constraintBottom_toTopOf="@+id/israeli_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/israeli_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_from_model"
        app:layout_constraintEnd_toEndOf="@+id/israeli_label"
        app:layout_constraintStart_toStartOf="@+id/israeli_label"
        app:layout_constraintTop_toBottomOf="@+id/israeli_label" />

    <TextView
        android:id="@+id/palestinian_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_from_model"
        app:layout_constraintEnd_toEndOf="@+id/palestinian_label"
        app:layout_constraintStart_toStartOf="@+id/palestinian_label"
        app:layout_constraintTop_toBottomOf="@+id/palestinian_label" />

    <Button
        android:id="@+id/results_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/israeli_button" />

    <TextView
        android:id="@+id/israeli_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/israeli"
        app:layout_constraintBottom_toTopOf="@+id/palestinian_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/palestinian_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/palestinian_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/palestinian"
        app:layout_constraintBottom_toTopOf="@+id/palestinian_button"
        app:layout_constraintEnd_toStartOf="@+id/israeli_label"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/israeli_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>